# PH-FX-Dashboard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml
dashboard/: app.py
scripts/: entrypoint.sh  export_excel.py
src/ph_fx/: __init__.py  alerts.py  config.py  loader.py  models.py  pipeline.py
src/ph_fx/ingestion/: bsp_historical.py  bsp_rerb.py  frankfurter.py
tests/: conftest.py  test_ingestion.py  test_loader.py  test_models.py
transforms/: dbt_project.yml  profiles.yml
transforms/models/marts/: _marts.yml  fx_dashboard.sql  fx_volatility.sql  real_exchange_rate.sql
transforms/models/staging/: _staging.yml  stg_fx_rates.sql
